@startuml
skinparam classAttributeIconSize 0

class Company {
    +name: String
    +backstory: String
}

class Stock {
    +company: Company
    +ticker: String
    +price: Float
    +last_updated: DateTime
}

class Team {
    +name: String
    +members: List<UserProfile>
}

class UserProfile {
    +user: User
    +balance: Float
    +team: Team
}

class SimulationSettings {
    +timer_step: Number
    +fluctuation_rate: Float
    +event: Event
    +trigger: Trigger
}

class Scenario {
    +name: String
    +description: String
    +backstory: String
    +difficulty_level: String
    +duration: Number
}

class Portfolio {
    +owner: UserProfile
    +stocks: List<Stock>
}

class TransactionHistory {
    +portfolio: Portfolio
    +transaction_type: String
    +amount: Float
    +price: Float
    +date: DateTime
}

class News {
    +title: String
    +content: String
    +published_date: DateTime
    +event: Event
}

class Event {
    +name: String
    +description: String
    +impact: Float
    +event_type: String
    +date: DateTime
}

class Trigger {
    +name: String
    +description: String
    +trigger_type: String
    +trigger_value: Float
    +event: Event
}

class StockPortfolio {
    +stocks: List<Stock>
    +portfolio: Portfolio
    +average_stock_price: Float
    +quantity: Int
    +market_value: Float
}

class Order {
    +details: String
    +quantity: Int
    +price: Float
    +date: DateTime
}

Company "1" -- "0..*" Stock : owns
UserProfile "1" -- "0..1" Team : member of
Scenario "0..*" -- "0..*" Company : includes
Scenario "0..*" -- "0..*" Team : includes
Scenario "1" -- "1" SimulationSettings : includes
SimulationSettings "1" -- "0..*" Trigger : includes
SimulationSettings "1" -- "0..*" Event : includes
UserProfile "1" -- "1" Portfolio : owns
Portfolio "0..1" -- "0..*" StockPortfolio : contains
StockPortfolio "0..*" -- "0..*" Stock : includes
Scenario "0..*" -- "0..*" TransactionHistory : records
TransactionHistory "0..*" -- "0..*" Order : records
Event "0..*" -- "0..*" News : triggers
Trigger "0..*" -- "0..*" Event : triggers

@enduml
